[front-end] Added orders confirmation, created BaseService, moved round column to the second position, fixed User interface and added remove user and reload on authentication error type response
BaseService contains the backend url and the function that add the headers to the axios requests
User interface fixed removing optional from confirmed and userId

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -28,5 +28,6 @@
     "error": "error",
     "orderAddedSuccessfully": "Order added successfully",
     "orderEditedSuccessfully": "Order edited successfully",
-    "orderRemovedSuccessfully": "Order removed successfully"
+    "orderRemovedSuccessfully": "Order removed successfully",
+    "confirm": "confirm"
 }
