--- a/frontend/public/locales/it/translation.json
+++ b/frontend/public/locales/it/translation.json
@@ -28,5 +28,6 @@
     "error": "errore",
     "orderAddedSuccessfully": "Ordine aggiunto con successo",
     "orderEditedSuccessfully": "Ordine modificato con successo",
-    "orderRemovedSuccessfully": "Ordine rimosso con successo"
+    "orderRemovedSuccessfully": "Ordine rimosso con successo",
+    "confirm": "conferma"
 }
