[front-end] Fixed group orders showing orders by user

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -29,5 +29,6 @@
     "orderAddedSuccessfully": "Order added successfully",
     "orderEditedSuccessfully": "Order edited successfully",
     "orderRemovedSuccessfully": "Order removed successfully",
-    "confirm": "confirm"
+    "confirm": "confirm",
+    "checked": "checked"
 }
