--- a/frontend/public/locales/it/translation.json
+++ b/frontend/public/locales/it/translation.json
@@ -29,5 +29,6 @@
     "orderAddedSuccessfully": "Ordine aggiunto con successo",
     "orderEditedSuccessfully": "Ordine modificato con successo",
     "orderRemovedSuccessfully": "Ordine rimosso con successo",
-    "confirm": "conferma"
+    "confirm": "conferma",
+    "checked": "spuntato"
 }
