[front-end] Fix show of only orders that have a round in groups and confirmed orders views and fix message in case of empty orders

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -30,5 +30,6 @@
     "orderEditedSuccessfully": "Order edited successfully",
     "orderRemovedSuccessfully": "Order removed successfully",
     "confirm": "confirm",
-    "checked": "checked"
+    "checked": "checked",
+    "ordersEmpty": "There aren't orders yet"
 }
