--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -39,5 +39,7 @@
     "orderDoesNotExists": "The order does not exists",
     "userAlreadyExistsInGroup": "The user already exists in the group",
     "userDoesNotExists": "The user does not exists",
-    "internalServerError": "Internal server error"
+    "internalServerError": "Internal server error",
+    "orderIsNotConfirmed": "The order is not confirmed",
+    "orderCheckedSuccessfully": "Updated order check successfully"
 }
