--- a/frontend/public/locales/it/translation.json
+++ b/frontend/public/locales/it/translation.json
@@ -41,5 +41,6 @@
     "userDoesNotExists": "L'utente non esiste",
     "internalServerError": "Errore interno del server",
     "orderIsNotConfirmed": "L'ordine non e` confermato",
-    "orderCheckedSuccessfully": "L'ordine e` stato spuntato con successo"
+    "orderCheckedSuccessfully": "L'ordine e` stato spuntato con successo",
+    "language": "lingua"
 }
