[frontend] Added select to choose which orders to show (orders to confirm, all confirmed orders or by round)

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -41,5 +41,7 @@
     "userDoesNotExists": "The user does not exists",
     "internalServerError": "Internal server error",
     "orderIsNotConfirmed": "The order is not confirmed",
-    "orderCheckedSuccessfully": "Updated order check successfully"
+    "orderCheckedSuccessfully": "Updated order check successfully",
+    "ordersToShow": "orders to show",
+    "cart": "cart"
 }
